Remove emojis from project and activity titles

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     <div class="card-image">
                         <img src="images/Project-1.jpeg" alt="Final Year Project"/>
                     </div>
-                    <h3>💻 Final Year Project - LeptoSafe</h3>
+                    <h3>Final Year Project - LeptoSafe</h3>
                     <p>LeptoSafe, a Flutter-based mobile application focusing on the individual management of the zoonotic disease, leptospirosis. Features include hotspot and health facilities tracking as well as self-assessment questionnaire among others. The technology stack includes Flutter, Firebase, Google Maps API and Android Studio.</p>
                     <div class="project-tags">
                         <span class="tag">Flutter</span>
@@ -455,7 +455,7 @@
                     <div class="card-image">
                         <img src="images/Project-2.png" alt="Vehicle Type Classification System"/>
                     </div>
-                    <h3>📱 Vehicle Type Classification System</h3>
+                    <h3>Vehicle Type Classification System</h3>
                     <p>Developed a multi-class image classification system to automate targeted billboard advertising. The system leverages EfficientNetB0, a deep learning model designed for image classification tasks. Integrate TensorFlow and Keras to process and train the model, achieving a 96% accuracy in classifying 7 vehicle body types.</p>
                     <div class="project-tags">
                         <span class="tag">Python</span>
@@ -467,7 +467,7 @@
                     <div class="card-image">
                         <img src="images/Project-3.png" alt="Data Analytics for Zakat Allocation Optimization" />
                     </div>
-                    <h3>🌐 Data Analytics for Zakat Allocation Optimization</h3>
+                    <h3>Data Analytics for Zakat Allocation Optimization</h3>
                     <p>Developed a data science solution to automate the evaluation process for university Zakat distribution. Utilized Python for data preprocessing and Matplotlib/Seaborn to generate visual insights. Built and integrated a GUI via Streamlit to present data visualizations and project findings to stakeholders.</p>
                     <div class="project-tags">
                         <span class="tag">Python</span>
@@ -488,42 +488,42 @@
                     <div class="card-image">
                         <img src="images/Activity-1.jpeg" alt="Public Relations i-Hax 2023" />
                     </div>
-                    <h3>🎯 Public Relations i-Hax 2023</h3>
+                    <h3>Public Relations i-Hax 2023</h3>
                     <p>Responsible for engaging with sponsors and speakers for the program</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Activity-2.jpeg" alt="Program Manager Induction PERMATA IIUM 2024/2025" />
                     </div>
-                    <h3>🤝 Program Manager Induction PERMATA IIUM 2024/2025</h3>
+                    <h3>Program Manager Induction PERMATA IIUM 2024/2025</h3>
                     <p>Oversee the program's flow and negotiate program's proposal with the authorities</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Activity-3.jpeg" alt="Floor Manager Liga Anak Negeri IIUM 2025" />
                     </div>
-                    <h3>🎨 Floor Manager Liga Anak Negeri IIUM 2025</h3>
+                    <h3>Floor Manager Liga Anak Negeri IIUM 2025</h3>
                     <p>Responsible for the flow of tentative and floor plan for the closing ceremony</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Activity-4.png" alt="Program Manager AGM Gamelan Gema Gangsa IIUM 2024/2025" />
                     </div>
-                    <h3>⚡ Program Manager AGM Gamelan Gema Gangsa IIUM 2024/2025</h3>
+                    <h3>Program Manager AGM Gamelan Gema Gangsa IIUM 2024/2025</h3>
                     <p>Handling the Annual Grand Meeting for the club, oversee program's flow and engage with relevant stakeholders</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Activity-5.png" alt="Module Developer Usrah in Action" />
                     </div>
-                    <h3>👏🏻 Module Developer Usrah in Action</h3>
+                    <h3>Module Developer Usrah in Action</h3>
                     <p>Collaborate in developing modules for primary school students (mobile application development)</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Activity-6.png" alt="Volunteer Mahasiswa Untuk Semua IIUM 2025" />
                     </div>
-                    <h3>✅ Volunteer Mahasiswa Untuk Semua IIUM 2025</h3>
+                    <h3>Volunteer Mahasiswa Untuk Semua IIUM 2025</h3>
                     <p>Joining as volunteer for a 'gotong-royong' programme in IIUM</p>
                 </div>
             </div>
@@ -539,25 +539,25 @@
                     <div class="card-image">
                         <img src="images/Achievement-1.jpeg" alt="Dean's List Sem 1 2024" />
                     </div>
-                    <h3>🏆 Dean's List Sem 1 2024</h3>
+                    <h3>Dean's List Sem 1 2024</h3>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Achievement-2.jpeg" alt="Dean's List Sem 2 2025"/>
                     </div>
-                    <h3>🎓 Dean's List Sem 2 2025</h3>
+                    <h3>Dean's List Sem 2 2025</h3>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Achievement-3.jpeg" alt="i-Capital Talent Show 2024 Champion"/>
                     </div>
-                    <h3>📚 i-Capital Talent Show 2024 Champion</h3>
+                    <h3>i-Capital Talent Show 2024 Champion</h3>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Achievement-4.jpeg" alt="ICT Arena 2025 Volleyball 3rd Place"/>
                     </div>
-                    <h3>📚 ICT Arena 2025 Volleyball 3rd Place</h3>
+                    <h3>ICT Arena 2025 Volleyball 3rd Place</h3>
                 </div>
             </div>
         </div>
